AM_CFLAGS = -Wall 
lib_LIBRARIES = libjsoncpp.a
libjsoncpp_a_SOURCES = json_reader.cpp  json_value.cpp  json_writer.cpp

libjsoncpp_a_LIBADD = 

EXTRA_DIST = json_batchallocator.h  json_internalarray.inl  json_internalmap.inl  json_valueiterator.inl

libjsoncpp_a_CXXFLAGS = -Wall -Wextra -g -I../../include/
